--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ca.hilikus.robocom</groupId>
-	<artifactId>jrobocom</artifactId>
+	<groupId>ca.hilikus.jrobocom</groupId>
+	<artifactId>jrobocom-core</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>JRoboCom</name>
 
@@ -41,6 +41,7 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 			<version>1.9.5</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
