--- a/jrobocom-core/pom.xml
+++ b/jrobocom-core/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>ca.hilikus.jrobocom</groupId>
 		<artifactId>jrobocom-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../jrobocom-parent</relativePath>
+		<relativePath>../jrobocom-parent/pom.xml</relativePath>
 	</parent>
 	
 	<artifactId>jrobocom-core</artifactId>
