--- a/jrobocom-simple-gui/pom.xml
+++ b/jrobocom-simple-gui/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>ca.hilikus.jrobocom</groupId>
 		<artifactId>jrobocom-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../jrobocom-parent/pom.xml</relativePath>
 	</parent>
 	<groupId>ca.hilikus.jrobocom</groupId>
 	<artifactId>jrobocom-simple-gui</artifactId>
