--- a/jrobocom-parent/pom.xml
+++ b/jrobocom-parent/pom.xml
@@ -16,7 +16,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>3.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -30,7 +30,7 @@
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.0.9</version>
+				<version>1.0.13</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -61,4 +61,7 @@
 		</license>
 	</licenses>
 	<packaging>pom</packaging>
+	<prerequisites>
+		<maven>2.2.1</maven>
+	</prerequisites>
 </project>
