--- a/jrobocom-parent/pom.xml
+++ b/jrobocom-parent/pom.xml
@@ -22,6 +22,15 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.15</version>
+				<configuration>
+					<forkedProcessTimeoutInSeconds>15</forkedProcessTimeoutInSeconds>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
