-Increased testNG version -Separated event manager into a separate library

--- a/jrobocom-core/pom.xml
+++ b/jrobocom-core/pom.xml
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.8</version>
+			<version>6.8.5</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -39,6 +39,11 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ca.hilikus.events</groupId>
+			<artifactId>event-manager</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	
