--- a/jrobocom-parent/pom.xml
+++ b/jrobocom-parent/pom.xml
@@ -2,6 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+	
 	<groupId>com.github.thehilikus.jrobocom</groupId>
 	<artifactId>jrobocom-parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -64,6 +71,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/theHilikus/JRoboCom.git</connection>
 		<url>https://github.com/theHilikus/JRoboCom</url>
+		<developerConnection>scm:git:https://github.com/theHilikus/JRoboCom.git</developerConnection>
 	</scm>
 	<inceptionYear>2012</inceptionYear>
 	<licenses>
