-Added instruction to disabling deployment of aggregator pom. it is not needed by third parties

--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,15 @@
 		<module>jrobocom-simple-gui</module>
 		<module>jrobocom-samples</module>
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
