--- a/jrobocom-samples/legends/pom.xml
+++ b/jrobocom-samples/legends/pom.xml
@@ -7,7 +7,10 @@
     <artifactId>jrobocom-samples</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
+  
+  <groupId>com.github.thehilikus.jrobocom.samples.legends</groupId>
   <artifactId>legends</artifactId>
+  
   <packaging>pom</packaging>
   <description>Classic Legends of the original game</description>
   <name>Legendary Robots</name>
