--- a/jrobocom-samples/pom.xml
+++ b/jrobocom-samples/pom.xml
@@ -9,8 +9,11 @@
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../jrobocom-parent/pom.xml</relativePath>
 	</parent>
+	
 	<groupId>com.github.thehilikus.jrobocom.samples</groupId>
 	<artifactId>jrobocom-samples</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	
 	<name>Sample Robots</name>
 	<packaging>pom</packaging>
 
