--- a/jrobocom-samples/simple/4Lunch/pom.xml
+++ b/jrobocom-samples/simple/4Lunch/pom.xml
@@ -4,13 +4,11 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.github.thehilikus.jrobocom.samples</groupId>
+		<groupId>com.github.thehilikus.jrobocom.samples.simple</groupId>
 		<artifactId>simple</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<groupId>com.github.thehilikus.jrobocom.samples</groupId>
 	<artifactId>4Lunch</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
 	<name>4Lunch</name>
 
 </project>
