--- a/jrobocom-samples/simple/black-jacks/pom.xml
+++ b/jrobocom-samples/simple/black-jacks/pom.xml
@@ -3,12 +3,10 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.github.thehilikus.jrobocom.samples</groupId>
+    <groupId>com.github.thehilikus.jrobocom.samples.simple</groupId>
     <artifactId>simple</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <groupId>com.github.thehilikus.jrobocom.samples</groupId>
   <artifactId>black-jacks</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
   <name>black-jacks</name>
 </project>
