--- a/jrobocom-parent/pom.xml
+++ b/jrobocom-parent/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
 		<artifactId>oss-parent</artifactId>
 		<version>7</version>
-		<relativePath/>
+		<relativePath />
 	</parent>
-	
+
 	<groupId>com.github.thehilikus.jrobocom</groupId>
 	<artifactId>jrobocom-parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -41,7 +41,20 @@
 					<forkedProcessTimeoutInSeconds>15</forkedProcessTimeoutInSeconds>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.1</version><!--$NO-MVN-MAN-VER$-->
+			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>${basedir}</directory>
+				<includes>
+					<include>LICENSE*</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 	<dependencyManagement>
