--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 					<skip>true</skip>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>1.5</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
