--- a/jrobocom-core/pom.xml
+++ b/jrobocom-core/pom.xml
@@ -15,11 +15,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava-collections</artifactId>
-			<version>r03</version>
-		</dependency>
-		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.8.5</version>
@@ -43,7 +38,7 @@
 		<dependency>
 			<groupId>com.github.thehilikus.events</groupId>
 			<artifactId>event-manager</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 	
