-Added default resource, which was lost when LICENSE resource was added

--- a/jrobocom-parent/pom.xml
+++ b/jrobocom-parent/pom.xml
@@ -44,10 +44,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4.1</version><!--$NO-MVN-MAN-VER$-->
+				<version>2.4.1</version><!--$NO-MVN-MAN-VER$ -->
 			</plugin>
 		</plugins>
 		<resources>
+			<resource>
+				<directory>${project.basedir}/src/main/resources</directory>
+			</resource>
 			<resource>
 				<directory>${basedir}</directory>
 				<includes>
