--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.thehilikus.jrobocom</groupId>
+	<parent>
+		<groupId>com.github.thehilikus.jrobocom</groupId>
+		<artifactId>jrobocom-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>jrobocom-parent/pom.xml</relativePath>
+	</parent>
+	
 	<artifactId>jrobocom-aggregator</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
 	<name>The overall aggregator</name>
 
 	<packaging>pom</packaging>
