--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.github.thehilikus.jrobocom</groupId>
-		<artifactId>jrobocom-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>jrobocom-parent/pom.xml</relativePath>
-	</parent>
-	
+
 	<artifactId>jrobocom-aggregator</artifactId>
 	<name>The overall aggregator</name>
 
@@ -19,7 +13,11 @@
 		<module>jrobocom-simple-gui</module>
 		<module>jrobocom-samples</module>
 	</modules>
-
+	<scm>
+		<connection>scm:git:git://github.com/theHilikus/JRoboCom.git</connection>
+		<url>https://github.com/theHilikus/JRoboCom</url>
+		<developerConnection>scm:git:https://github.com/theHilikus/JRoboCom.git</developerConnection>
+	</scm>
 	<build>
 		<plugins>
 			<plugin>
@@ -36,4 +34,6 @@
 			</plugin>
 		</plugins>
 	</build>
+	<groupId>com.github.thehilikus.jrobocom</groupId>
+	<version>1.0.0-SNAPSHOT</version>
 </project>
