-Added reference to latest MRP version in aggregator pom

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 				<artifactId>license-maven-plugin</artifactId>
 				<version>1.5</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.1</version>
+			</plugin>
 		</plugins>
 	</build>
 	<groupId>com.github.thehilikus.jrobocom</groupId>
