--- a/jrobocom-samples/simple/bank-jumper/pom.xml
+++ b/jrobocom-samples/simple/bank-jumper/pom.xml
@@ -3,11 +3,11 @@
   <parent>
     <groupId>com.github.thehilikus.jrobocom.samples.simple</groupId>
     <artifactId>simple</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   
   <artifactId>bank-jumper</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   
   <name>Bank-jumper</name>
   <description>Simple robot that jumps from bank to bank</description>
