--- a/jrobocom-simple-gui/pom.xml
+++ b/jrobocom-simple-gui/pom.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.github.thehilikus.jrobocom</groupId>
 		<artifactId>jrobocom-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0</version>
 	</parent>
 	<artifactId>jrobocom-simple-gui</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-beta-01</version>
 	<name>JRoboCom UI</name>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.github.thehilikus.jrobocom</groupId>
 			<artifactId>jrobocom-core</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-beta-01</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
