--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -12,7 +11,7 @@
 
 	<groupId>com.github.thehilikus.jrobocom</groupId>
 	<artifactId>jrobocom-parent</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>Parent POM</name>
 
 	<properties>
@@ -100,7 +99,8 @@
 		<connection>scm:git:git://github.com/theHilikus/JRoboCom.git</connection>
 		<url>https://github.com/theHilikus/JRoboCom</url>
 		<developerConnection>scm:git:https://github.com/theHilikus/JRoboCom.git</developerConnection>
-	</scm>
+	  <tag>jrobocom-first-release</tag>
+  </scm>
 	<inceptionYear>2012</inceptionYear>
 	<licenses>
 		<license>
