--- a/jrobocom-samples/legends/pom.xml
+++ b/jrobocom-samples/legends/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.github.thehilikus.jrobocom.samples</groupId>
     <artifactId>jrobocom-samples</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
   
   <groupId>com.github.thehilikus.jrobocom.samples.legends</groupId>
