--- a/jrobocom-samples/simple/4Lunch/pom.xml
+++ b/jrobocom-samples/simple/4Lunch/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>com.github.thehilikus.jrobocom.samples.simple</groupId>
 		<artifactId>simple</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>4Lunch</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	
 	<name>4Lunch</name>
 
