--- a/jrobocom-samples/simple/black-jacks/pom.xml
+++ b/jrobocom-samples/simple/black-jacks/pom.xml
@@ -4,10 +4,10 @@
   <parent>
     <groupId>com.github.thehilikus.jrobocom.samples.simple</groupId>
     <artifactId>simple</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
   <artifactId>black-jacks</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   
   <name>black-jacks</name>
   
