--- a/jrobocom-simple-gui/pom.xml
+++ b/jrobocom-simple-gui/pom.xml
@@ -4,17 +4,17 @@
 	<parent>
 		<groupId>com.github.thehilikus.jrobocom</groupId>
 		<artifactId>jrobocom-parent</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>jrobocom-simple-gui</artifactId>
-	<version>1.0.0-beta-01</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>JRoboCom UI</name>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.github.thehilikus.jrobocom</groupId>
 			<artifactId>jrobocom-core</artifactId>
-			<version>1.0.0-beta-01</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
