--- a/jrobocom-core/pom.xml
+++ b/jrobocom-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.thehilikus.jrobocom</groupId>
 		<artifactId>jrobocom-parent</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.0</version>
 	</parent>
 	
 	<artifactId>jrobocom-core</artifactId>
@@ -40,5 +40,5 @@
 		</dependency>
 	</dependencies>
 	
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-beta-02</version>
 </project>
