--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.github.thehilikus.jrobocom</groupId>
 	<artifactId>jrobocom-parent</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>Parent POM</name>
 
 	<properties>
@@ -99,7 +99,7 @@
 		<connection>scm:git:git://github.com/theHilikus/JRoboCom.git</connection>
 		<url>https://github.com/theHilikus/JRoboCom</url>
 		<developerConnection>scm:git:https://github.com/theHilikus/JRoboCom.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>jrobocom-parent-1.0</tag>
   </scm>
 	<inceptionYear>2012</inceptionYear>
 	<licenses>
