--- a/jrobocom-samples/pom.xml
+++ b/jrobocom-samples/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<groupId>com.github.thehilikus.jrobocom</groupId>
 		<artifactId>jrobocom-parent</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	
 	<groupId>com.github.thehilikus.jrobocom.samples</groupId>
 	<artifactId>jrobocom-samples</artifactId>
-	<version>1.1</version>
+	<version>1.2-SNAPSHOT</version>
 	
 	<name>Sample Robots</name>
 	<packaging>pom</packaging>
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>com.github.thehilikus.jrobocom</groupId>
 			<artifactId>jrobocom-core</artifactId>
-			<version>1.0.0-beta-02</version>
+			<version>1.0.0-beta-03-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
