--- a/jrobocom-samples/simple/pom.xml
+++ b/jrobocom-samples/simple/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.thehilikus.jrobocom.samples</groupId>
 		<artifactId>jrobocom-samples</artifactId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.github.thehilikus.jrobocom.samples.simple</groupId>
