-Changed event-manager version to depend on the version with improved dependencies -Changed logging backend dependency as optional -Added slf4j api as a compile dependency

--- a/jrobocom-core/pom.xml
+++ b/jrobocom-core/pom.xml
@@ -32,11 +32,17 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.github.thehilikus.events</groupId>
 			<artifactId>event-manager</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
 		</dependency>
 	</dependencies>
 	
