task 7: Implement old sample robots http://github.com/theHilikus/JRoboCom/issues/issue/7
-Implemented MetaMorf robot

--- a/jrobocom-samples/simple/pom.xml
+++ b/jrobocom-samples/simple/pom.xml
@@ -20,5 +20,6 @@
 		<module>black-jacks</module>
 		<module>bank-jumper</module>
 		<module>megamorf</module>
+		<module>metamorf</module>
 	</modules>
 </project>
