--- a/jrobocom-core/pom.xml
+++ b/jrobocom-core/pom.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.github.thehilikus.jrobocom</groupId>
 		<artifactId>jrobocom-parent</artifactId>
 		<version>1.1-SNAPSHOT</version>
 	</parent>
-	
+
 	<artifactId>jrobocom-core</artifactId>
+	<version>1.0.0-beta-03-SNAPSHOT</version>
 	<name>JRoboCom core</name>
 	<description>The game core infrastructure</description>
 
@@ -45,6 +47,25 @@
 			<version>1.7.5</version>
 		</dependency>
 	</dependencies>
-	
-	<version>1.0.0-beta-03-SNAPSHOT</version>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>2.0.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<format>xml</format>
+					<maxmem>256m</maxmem>
+					<!-- aggregated reports for multi-module projects -->
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
