--- a/jrobocom-core/pom.xml
+++ b/jrobocom-core/pom.xml
@@ -50,11 +50,7 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.eluder.coveralls</groupId>
-				<artifactId>coveralls-maven-plugin</artifactId>
-				<version>2.0.1</version>
-			</plugin>
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
@@ -65,6 +61,31 @@
 					<!-- aggregated reports for multi-module projects -->
 					<aggregate>true</aggregate>
 				</configuration>
+				<executions>
+					<execution>
+						<id>coverage</id>
+						<goals>
+							<goal>cobertura</goal>
+						</goals>
+						<phase>test</phase>
+						<inherited>false</inherited>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>2.0.1</version>
+				<executions>
+					<execution>
+						<id>send-report</id>
+						<goals>
+							<goal>cobertura</goal>
+						</goals>
+						<phase>test</phase>
+						<inherited>false</inherited>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
