--- a/pom.xml
+++ b/pom.xml
@@ -77,11 +77,14 @@
 					</instrumentation>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.eluder.coveralls</groupId>
 				<artifactId>coveralls-maven-plugin</artifactId>
 				<version>2.0.1</version>
+				<configuration>
+					<branch>master</branch> <!-- otherwise it appears as origin/master -->
+				</configuration>
 			</plugin>
 		</plugins>
 		<resources>
